--- a/templates/base.html
+++ b/templates/base.html
@@ -32,6 +32,8 @@
 
     <!-- custom javascript -->
     <script src="{% static 'js/script.js' %}" type="text/javascript"></script>
+    <!-- PayPal script -->
+    <script src="https://www.paypal.com/sdk/js?client-id=AUWCthg0MlC6EJaHTJPvI5LgW8pXXnZaodlIHVC5G6qFdSRqigcV94lkHizFIVWwU4odkATfrchuk4Iy&currency=USD"></script>
 
     <script type="text/javascript">
         /// some script
