--- a/templates/orders/payments.html
+++ b/templates/orders/payments.html
@@ -116,14 +116,10 @@
                             <!-- PayPal Button Will Load -->
                         </div>
 
-
                     </div> <!-- card-body.// -->
                 </div> <!-- card.// -->
-
-                {% comment %}
                 <div class="alert alert-danger" role="alert">
-                    <a href="{% url 'checkout' %}" class="btn btn-primary btn-lg btn-block mb-3">Proceed to Payment</a>
-                    {% endcomment %}
+                    <b>Please Note: </b>This is a demo website. Do not try to make real payments.
                 </div>
             </aside> <!-- col.// -->
 
@@ -153,13 +149,13 @@
         return cookieValue;
     }
 
-    var amount = "{{ grand_total}}"
+    var amount = "{{ grand_total }}"
     var url = "{% url 'payments' %}"
     var csrftoken = getCookie('csrftoken');
     var orderID = "{{order.order_number}}"
     var payment_method = 'PayPal'
-    //var redirect_url = "{% url 'order_complete' %}"
-
+    var redirect_url = "{% url 'order_complete' %}"
+    // Render the PayPal button into #paypal-button-container
     paypal.Buttons({
 
         style: {
@@ -185,7 +181,7 @@
             return actions.order.capture().then(function (details) {
                 // Show a success message to the buyer
                 console.log(details);
-                sendData()
+                sendData();
 
                 function sendData() {
                     fetch(url, {
@@ -211,7 +207,7 @@
         }
 
 
-
     }).render('#paypal-button-container');
 </script>
+
 {% endblock %}
